--- a/src/main/resources/fileXML/mainGame/choice.fxml
+++ b/src/main/resources/fileXML/mainGame/choice.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-
-
+<?import javafx.scene.text.Text?>
 <AnchorPane prefHeight="175.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.ChoiceController">
    <children>
       <Button fx:id="buttonChoiche1" layoutX="55.0" layoutY="95.0" mnemonicParsing="false" onAction="#choice1" prefHeight="36.0" prefWidth="71.0">
@@ -21,11 +20,11 @@
       </Button>
       <HBox alignment="CENTER" layoutX="1.0" layoutY="7.0" prefHeight="81.0" prefWidth="297.0">
          <children>
-            <Label fx:id="message" text="Label">
+            <Text fx:id="message" text="Label">
                <font>
                   <Font name="Lucida Blackletter" size="26.0" />
                </font>
-            </Label>
+            </Text>
          </children>
       </HBox>
    </children>
