--- a/src/main/resources/fileXML/mainGame/choice.fxml
+++ b/src/main/resources/fileXML/mainGame/choice.fxml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 <AnchorPane prefHeight="175.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.ChoiceController">
    <children>
-      <Button fx:id="buttonChoiche1" layoutX="55.0" layoutY="95.0" mnemonicParsing="false" onAction="#choice1" prefHeight="36.0" prefWidth="71.0">
-         <font>
-            <Font name="Lucida Blackletter" size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="buttonChoiche2" layoutX="180.0" layoutY="95.0" mnemonicParsing="false" onAction="#choice2" prefHeight="36.0" prefWidth="71.0">
-         <font>
-            <Font name="Lucida Blackletter" size="18.0" />
-         </font>
-      </Button>
-      <HBox alignment="CENTER" layoutX="1.0" layoutY="7.0" prefHeight="81.0" prefWidth="297.0">
+      <VBox prefHeight="200.0" prefWidth="297.0">
          <children>
-            <Text fx:id="message" text="Label">
-               <font>
-                  <Font name="Lucida Blackletter" size="26.0" />
-               </font>
-            </Text>
+            <HBox alignment="CENTER" prefHeight="94.0" prefWidth="297.0">
+               <children>
+                  <Text fx:id="message" text="Label">
+                     <font>
+                        <Font name="Lucida Blackletter" size="26.0" />
+                     </font>
+                  </Text>
+               </children>
+            </HBox>
+            <HBox fx:id="boxButton" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+               <children>
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
    </children>
 </AnchorPane>
