--- a/src/main/resources/fileXML/login/login.fxml
+++ b/src/main/resources/fileXML/login/login.fxml
@@ -33,7 +33,7 @@
                 <Font name="Lucida Blackletter" size="17.849999999999998" />
             </font>
         </Button>
-        <VBox layoutX="333.2" layoutY="691.9" prefHeight="57.8" prefWidth="85.0" spacing="21.25">
+        <VBox layoutX="335.2" layoutY="684.9" prefHeight="57.8" prefWidth="85.0" spacing="21.25">
             <children>
                 <RadioButton id="rmi" fx:id="rmi" mnemonicParsing="false" onAction="#rmiClicked" selected="true" text="rmi">
                     <toggleGroup>
@@ -50,10 +50,10 @@
                 </RadioButton>
             </children>
         </VBox>
-      <VBox layoutX="84.0" layoutY="681.0" prefHeight="57.8" prefWidth="85.0" spacing="21.25">
+      <VBox layoutX="84.0" layoutY="683.0" prefHeight="57.8" prefWidth="85.0" spacing="10.0">
          <children>
-              <TextField id="username" fx:id="username" prefHeight="30.599999999999998" prefWidth="85.0" promptText="Username" style="-fx-background-color: papayawhip; -fx-border-color: sandybrown;" />
-            <TextField id="username" fx:id="IP" prefHeight="30.599999999999998" prefWidth="85.0" promptText="IP Address" style="-fx-background-color: papayawhip; -fx-border-color: sandybrown;" />
+              <TextField id="username" fx:id="username" prefHeight="17.0" prefWidth="85.0" promptText="Username" style="-fx-background-color: papayawhip; -fx-border-color: sandybrown;" />
+            <TextField fx:id="IP" prefHeight="23.0" prefWidth="85.0" promptText="IP Address" style="-fx-background-color: papayawhip; -fx-border-color: sandybrown;" text="127.0.0.1" />
          </children>
       </VBox>
     </children>
