--- a/src/main/resources/fileXML/mainGame/choice.fxml
+++ b/src/main/resources/fileXML/mainGame/choice.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -20,6 +19,7 @@
                   </Text>
                </children>
             </HBox>
+            <HBox fx:id="forImage" alignment="CENTER" prefHeight="5.0" prefWidth="297.0" />
             <HBox fx:id="boxButton" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
                <children>
                </children>
