--- a/src/main/resources/fileXML/mainGame/endMatch.fxml
+++ b/src/main/resources/fileXML/mainGame/endMatch.fxml
@@ -1,18 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="793.0" prefWidth="924.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.EndGameController">
    <children>
-      <ImageView fitHeight="791.0" fitWidth="924.0" opacity="0.51">
-         <image>
-            <Image url="@../../../../../../../Scaricati/photo5976785436263164165.jpg" />
-         </image>
+      <ImageView fx:id="sfondo" fitHeight="791.0" fitWidth="924.0" opacity="0.8">
       </ImageView>
-      <Button layoutX="98.0" layoutY="639.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="171.0" text="New Game" onAction="#newGame"/>
+      <HBox alignment="CENTER" layoutY="603.0" prefHeight="100.0" prefWidth="924.0" spacing="60.0">
+         <children>
+            <Button fx:id="close" mnemonicParsing="false" onAction="#close" prefHeight="60.0" prefWidth="171.0" text="Close">
+               <font>
+                  <Font name="Lucida Blackletter" size="26.0" />
+               </font>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#newGame" prefHeight="60.0" prefWidth="171.0" text="New Game">
+               <font>
+                  <Font name="Lucida Blackletter" size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" layoutY="687.0" prefHeight="100.0" prefWidth="924.0" spacing="60.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#ringraziamenti" prefHeight="60.0" prefWidth="209.0" text="Grazie A Tutti">
+               <font>
+                  <Font name="Lucida Blackletter" size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <VBox layoutX="513.0" layoutY="45.0" prefHeight="200.0" prefWidth="295.0" spacing="40.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Text fx:id="winner" strokeType="OUTSIDE" strokeWidth="0.0" text="you win!">
+                     <font>
+                        <Font name="Lucida Blackletter" size="66.0" />
+                     </font>
+                  </Text>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="283.0" spacing="30.0">
+               <children>
+                  <Button fx:id="statisticButton" mnemonicParsing="false" onAction="#showStatistics" text="Statistics">
+                     <font>
+                        <Font name="Lucida Blackletter" size="20.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="standingsButton" mnemonicParsing="false" onAction="#showStandings" text="Standings">
+                     <font>
+                        <Font name="Lucida Blackletter" size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
