--- a/src/main/resources/fileXML/mainGame/councilPalaceMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/councilPalaceMainGame.fxml
@@ -195,11 +195,7 @@
                 </Pane>
                 <VBox prefHeight="306.84999999999997" prefWidth="308.55">
                     <children>
-                        <ScrollPane fx:id="chatArea" prefHeight="279.84999999999997" prefWidth="308.55">
-                            <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0"/>
-                            </content>
-                        </ScrollPane>
+                        <ScrollPane fx:id="chatArea" prefHeight="279.84999999999997" prefWidth="308.55" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                         <HBox alignment="TOP_RIGHT" prefHeight="27.0" prefWidth="308.55">
                             <children>
                                 <TextField fx:id="chatText" prefHeight="26.0" prefWidth="196.0"/>
