--- a/src/main/resources/fileXML/mainGame/personalBoardMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/personalBoardMainGame.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,191 +12,121 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="784.55" prefWidth="909.5" xmlns="http://javafx.com/javafx/8.0.111"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="project.client.ui.gui.controller.PersonalBoardController">
+<AnchorPane prefHeight="784.55" prefWidth="909.5" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.PersonalBoardController">
     <children>
         <ImageView fitHeight="731.85" fitWidth="500.65" layoutX="29.75" layoutY="26.349999999999998">
             <image>
-                <Image url="/images/board4carte-iloveimg-resized.png"/>
+                <Image url="/images/board4carte-iloveimg-resized.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="784.55" fitWidth="550.8">
             <image>
-                <Image url="/images/cornici/ritaglioCornice.png"/>
+                <Image url="/images/cornici/ritaglioCornice.png" />
             </image>
         </ImageView>
-        <HBox fx:id="territoryCard" layoutX="34.85" layoutY="514.25" prefHeight="154.7" prefWidth="482.8"
-              spacing="10.2">
+        <HBox fx:id="territoryCard" layoutX="34.85" layoutY="514.25" prefHeight="154.7" prefWidth="482.8" spacing="10.2">
             <children>
-                <ImageView fx:id="territory0" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnTerritory0"/>
-                <ImageView fx:id="territory1" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnTerritory1"/>
-                <ImageView fx:id="territory2" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnTerritory2"/>
-                <ImageView fx:id="territory3" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnTerritory3"/>
-                <ImageView fx:id="territory4" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnTerritory4"/>
-                <ImageView fx:id="territory5" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnTerritory5"/>
+                <ImageView fx:id="territory0" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnTerritory0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="territory1" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnTerritory1" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="territory2" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnTerritory2" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="territory3" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnTerritory3" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="territory4" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnTerritory4" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="territory5" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnTerritory5" pickOnBounds="true" preserveRatio="true" />
             </children>
         </HBox>
-        <HBox fx:id="characterCard" layoutX="34.85" layoutY="328.95" prefHeight="154.7" prefWidth="482.8"
-              spacing="10.2">
+        <HBox fx:id="characterCard" layoutX="34.85" layoutY="328.95" prefHeight="154.7" prefWidth="482.8" spacing="10.2">
             <children>
-                <ImageView fx:id="character0" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnCharacter0"/>
-                <ImageView fx:id="character1" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnCharacter1"/>
-                <ImageView fx:id="character2" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnCharacter2"/>
-                <ImageView fx:id="character3" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnCharacter3"/>
-                <ImageView fx:id="character4" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnCharacter4"/>
-                <ImageView fx:id="character5" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnCharacter5"/>
+                <ImageView fx:id="character0" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnCharacter0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="character1" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnCharacter1" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="character2" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnCharacter2" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="character3" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnCharacter3" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="character4" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnCharacter4" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="character5" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnCharacter5" pickOnBounds="true" preserveRatio="true" />
             </children>
         </HBox>
         <HBox fx:id="buildingCard" layoutX="36.55" layoutY="182.75" prefHeight="154.7" prefWidth="482.8" spacing="10.2">
             <children>
-                <ImageView fx:id="building0" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnBuilding0"/>
-                <ImageView fx:id="building1" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnBuilding1"/>
-                <ImageView fx:id="building2" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnBuilding2"/>
-                <ImageView fx:id="building3" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnBuilding3"/>
-                <ImageView fx:id="building4" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnBuilding4"/>
-                <ImageView fx:id="building5" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnBuilding5"/>
+                <ImageView fx:id="building0" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnBuilding0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="building1" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnBuilding1" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="building2" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnBuilding2" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="building3" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnBuilding3" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="building4" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnBuilding4" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="building5" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnBuilding5" pickOnBounds="true" preserveRatio="true" />
             </children>
         </HBox>
-        <HBox fx:id="venturesCard" layoutX="35.699999999999996" layoutY="37.4" prefHeight="154.7" prefWidth="482.8"
-              spacing="10.2">
+        <HBox fx:id="venturesCard" layoutX="35.699999999999996" layoutY="37.4" prefHeight="154.7" prefWidth="482.8" spacing="10.2">
             <children>
-                <ImageView fx:id="ventures0" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnVentures0"/>
-                <ImageView fx:id="ventures1" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnVentures1"/>
-                <ImageView fx:id="ventures2" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnVentures2"/>
-                <ImageView fx:id="ventures3" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnVentures3"/>
-                <ImageView fx:id="ventures4" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnVentures4"/>
-                <ImageView fx:id="ventures5" fitHeight="118.14999999999999" fitWidth="73.1" pickOnBounds="true"
-                           preserveRatio="true" onMouseClicked="#zoomOnVentures5"/>
+                <ImageView fx:id="ventures0" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnVentures0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="ventures1" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnVentures1" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="ventures2" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnVentures2" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="ventures3" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnVentures3" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="ventures4" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnVentures4" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="ventures5" fitHeight="118.14999999999999" fitWidth="73.1" onMouseClicked="#zoomOnVentures5" pickOnBounds="true" preserveRatio="true" />
             </children>
         </HBox>
         <HBox layoutX="57.8" layoutY="627.3" prefHeight="48.449999999999996" prefWidth="205.7" spacing="46.75">
             <children>
                 <Label fx:id="numberOfCoins" prefHeight="34.85" prefWidth="83.3" text="74.8">
                     <font>
-                        <Font name="Lucida Blackletter" size="25.5"/>
+                        <Font name="Lucida Blackletter" size="25.5" />
                     </font>
                 </Label>
                 <Label fx:id="numberOfWood" prefHeight="34.85" prefWidth="73.95" text="22.95">
                     <font>
-                        <Font name="Lucida Blackletter" size="25.5"/>
+                        <Font name="Lucida Blackletter" size="25.5" />
                     </font>
                 </Label>
                 <Label fx:id="numberOfStone" prefHeight="34.85" prefWidth="76.5" text="37.4">
                     <font>
-                        <Font name="Lucida Blackletter" size="25.5"/>
+                        <Font name="Lucida Blackletter" size="25.5" />
                     </font>
                 </Label>
             </children>
         </HBox>
         <Label fx:id="numberOfServants" layoutX="304.3" layoutY="628.15" text="0.0">
             <font>
-                <Font name="Lucida Blackletter" size="25.5"/>
+                <Font name="Lucida Blackletter" size="25.5" />
             </font>
         </Label>
         <Pane layoutX="578.0" layoutY="25.5" prefHeight="725.9" prefWidth="306.84999999999997">
             <children>
                 <ImageView fitHeight="466.65" fitWidth="306.84999999999997" opacity="0.612">
                     <image>
-                        <Image url="/images/immaginiSetUp/finestraPiccola.png"/>
+                        <Image url="/images/immaginiSetUp/finestraPiccola.png" />
                     </image>
                 </ImageView>
                 <VBox alignment="BOTTOM_LEFT" prefHeight="731.85" prefWidth="308.55">
                     <children>
-                        <ImageView fx:id="bonusTile" fitHeight="467.5" fitWidth="56.949999999999996" pickOnBounds="true"
-                                   preserveRatio="true"></ImageView>
-                        <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#goBack" prefHeight="66.3"
-                                prefWidth="308.55" text="go back">
+                        <ImageView fx:id="bonusTile" fitHeight="467.5" fitWidth="56.949999999999996" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#goBack" prefHeight="66.3" prefWidth="308.55" text="go back">
                             <font>
-                                <Font name="Lucida Blackletter" size="17.849999999999998"/>
+                                <Font name="Lucida Blackletter" size="17.849999999999998" />
                             </font>
                         </Button>
-                        <SplitPane dividerPositions="0.7224999999999999" orientation="VERTICAL" prefHeight="198.9"
-                                   prefWidth="308.55">
-                            <items>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="199.75"
-                                            prefWidth="306.84999999999997">
-                                    <children>
-                                        <Label fx:id="chatArea" layoutX="4.25" layoutY="130.9"
-                                               prefHeight="181.04999999999998" prefWidth="306.84999999999997"
-                                               text="chat" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="130.9"/>
-                                    </children>
-                                </AnchorPane>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="85.0" prefWidth="136.0">
-                                    <children>
-                                        <SplitPane dividerPositions="0.6419402985074627" layoutX="-2.55" layoutY="0.85"
-                                                   prefHeight="26.349999999999998" prefWidth="293.25">
-                                            <items>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="24.65"
-                                                            prefWidth="195.5">
-                                                    <children>
-                                                        <TextField fx:id="chatText" layoutX="20.4" layoutY="0.85"
-                                                                   prefHeight="24.65" prefWidth="196.35"
-                                                                   AnchorPane.bottomAnchor="0.0"
-                                                                   AnchorPane.leftAnchor="20.4"
-                                                                   AnchorPane.rightAnchor="0.0"
-                                                                   AnchorPane.topAnchor="0.0"/>
-                                                    </children>
-                                                </AnchorPane>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="24.65"
-                                                            prefWidth="131.75">
-                                                    <children>
-                                                        <Button fx:id="send" layoutX="3.4" layoutY="1.7"
-                                                                mnemonicParsing="false" onAction="#sendChat"
-                                                                prefHeight="24.65" prefWidth="73.1" text="Send"
-                                                                AnchorPane.bottomAnchor="0.0"
-                                                                AnchorPane.leftAnchor="0.0"
-                                                                AnchorPane.rightAnchor="-1.7"
-                                                                AnchorPane.topAnchor="0.0"/>
-                                                    </children>
-                                                </AnchorPane>
-                                            </items>
-                                        </SplitPane>
-                                    </children>
-                                </AnchorPane>
-                            </items>
-                        </SplitPane>
+                  <ScrollPane fx:id="chatArea" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <HBox alignment="TOP_CENTER" prefHeight="33.0" prefWidth="309.0">
+                     <children>
+                        <TextField prefHeight="26.0" prefWidth="201.0" />
+                        <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="83.0" text="send" />
+                     </children>
+                  </HBox>
                     </children>
                 </VBox>
                 <Label layoutX="68.0" layoutY="38.25" text="bonus on production">
                     <font>
-                        <Font name="Lucida Blackletter" size="17.849999999999998"/>
+                        <Font name="Lucida Blackletter" size="17.849999999999998" />
                     </font>
                 </Label>
                 <Label layoutX="68.0" layoutY="312.8" text="bonus on harvester">
                     <font>
-                        <Font name="Lucida Blackletter" size="17.849999999999998"/>
+                        <Font name="Lucida Blackletter" size="17.849999999999998" />
                     </font>
                 </Label>
             </children>
         </Pane>
         <ImageView fitHeight="784.55" fitWidth="358.7" layoutX="550.8">
             <image>
-                <Image url="/images/cornici/ritaglioCornice10Quadretti.png"/>
+                <Image url="/images/cornici/ritaglioCornice10Quadretti.png" />
             </image>
         </ImageView>
     </children>
