--- a/src/main/resources/fileXML/mainGame/towersMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/towersMainGame.fxml
@@ -54,11 +54,7 @@
                 </Label>
             <VBox prefHeight="104.0" prefWidth="306.0">
                <children>
-                  <ScrollPane fx:id="chatArea" prefHeight="200.0" prefWidth="200.0">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                    </content>
-                  </ScrollPane>
+                  <ScrollPane fx:id="chatArea" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <TextField fx:id="chatText" prefHeight="26.0" prefWidth="211.0" />
