--- a/src/main/resources/fileXML/mainGame/choice.fxml
+++ b/src/main/resources/fileXML/mainGame/choice.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="175.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.ChoiceController">
+<AnchorPane maxWidth="1.7976931348623157E308" prefHeight="175.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.ChoiceController">
    <children>
       <VBox prefHeight="200.0" prefWidth="297.0">
          <children>
